--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav li,
+footer li,
+.size li,
+button,
+.cart,
+.navbar-smallscreen_links {
+  list-style: none;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn {
+  font-family: "Sora", sans-serif;
+  font-weight: 600;
+  line-height: 18px;
+  background-color: #212121;
+  padding: 10px 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 0.5rem;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
