--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
-a {
-  color: inherit;
-  text-decoration: none;
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600;700&display=swap");
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  font-family: "Sora", sans-serif;
 }
 
 nav li,
@@ -11,6 +15,11 @@ button,
 .navbar-smallscreen_links {
   list-style: none;
   cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .btn {
