--- a/src/components/navBard/NavBar.scss
+++ b/src/components/navBard/NavBar.scss
@@ -8,6 +8,7 @@ nav {
     position: absolute;
     top: 1.8rem;
     left: 4.5rem;
+    color: var(--color-green);
   }
 
   .shop {
@@ -30,11 +31,12 @@ nav {
   .cart,
   .login {
     padding: 12px;
-    background-color: #f1f1f1;
+    background-color: var(--color-light);
     border-radius: 50%;
     border: none;
     position: relative;
     transition: transform 0.4s ease;
+    height: 46px;
 
     &:hover {
       transform: scale(1.1, 1.1);
@@ -46,7 +48,7 @@ nav {
       right: 5px;
       font-size: 12px;
       color: #eee;
-      background-color: #f02d34;
+      background-color: var(--color-red);
       width: 20px;
       height: 14px;
       border-radius: 50%;
