--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600;700&display=swap");
+:root {
+  --color-red: #ff6f61;
+  --color-light: #f2f1ec;
+  --color-green: #75aa70;
+  --color-blue: #6b8a99;
+}
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  font-family: "Sora", sans-serif;
 }
