--- a/src/pages/login/Login.scss
+++ b/src/pages/login/Login.scss
@@ -16,7 +16,6 @@
   flex-direction: column;
 
   .form-input {
-    margin-bottom: 2.8rem;
     position: relative;
 
     label {
@@ -29,11 +28,18 @@
     }
 
     input {
+      margin-bottom: 2.8rem;
       padding: 10px;
       font-size: 16px;
       outline: none;
       width: 100%;
     }
+  }
+
+  .identif-error {
+    margin-top: -1.9rem;
+    margin-bottom: 0.65rem;
+    color: var(--color-red);
   }
 
   button {
