--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
   --color-red: #ff6f61;
   --color-light: #f2f1ec;
   --color-green: #75aa70;
-  --color-blue: #6b8a99;
+  --color-blue: #136893;
+  --color-blue-dark: #2b4d5e;
 }
 
 * {
