--- a/src/App.scss
+++ b/src/App.scss
@@ -26,11 +26,26 @@ a {
   font-family: "Sora", sans-serif;
   font-weight: 600;
   line-height: 18px;
-  background-color: #212121;
+  background-color: var(--color-blue);
   padding: 10px 0;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
   color: white;
+  border: 0px solid black;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background: var(--color-blue-dark);
+  }
+}
+
+.btn-red {
+  background-color: var(--color-red);
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #fd4d3d;
+  }
 }
