--- a/src/components/navBard/NavBar.scss
+++ b/src/components/navBard/NavBar.scss
@@ -3,6 +3,7 @@ nav {
   display: flex;
   align-items: center;
   position: relative;
+  height: 75px;
 
   .name-logo {
     position: absolute;
@@ -28,8 +29,7 @@ nav {
     top: 0.9rem;
   }
 
-  .cart,
-  .login {
+  .cart {
     padding: 12px;
     background-color: var(--color-light);
     border-radius: 50%;
@@ -54,6 +54,42 @@ nav {
       border-radius: 50%;
       text-align: center;
       font-weight: 600;
+    }
+  }
+
+  .login {
+    padding: 12px;
+    background-color: var(--color-light);
+    border-radius: 50%;
+    border: none;
+    position: relative;
+    height: 46px;
+    transition: border-radius 0.2s;
+    transition: transform 0.4s ease;
+
+    &:hover {
+      border-radius: 0%;
+      transform: scale(1.1, 1.1);
+    }
+
+    .user-options {
+      position: absolute;
+      right: 0px;
+      top: 46px;
+      background: var(--color-light);
+      width: 150px;
+      padding: 7px;
+      display: none;
+
+      button {
+        width: 100%;
+        height: 32px;
+        margin-bottom: 3px;
+      }
+    }
+
+    &:hover .user-options {
+      display: block;
     }
   }
 }
