--- a/src/components/navBard/NavBar.scss
+++ b/src/components/navBard/NavBar.scss
@@ -5,6 +5,10 @@ nav {
   position: relative;
   height: 75px;
 
+  img {
+    margin-left: -8px;
+  }
+
   .name-logo {
     position: absolute;
     top: 1.8rem;
@@ -50,7 +54,6 @@ nav {
       color: #eee;
       background-color: var(--color-red);
       width: 20px;
-      height: 14px;
       border-radius: 50%;
       text-align: center;
       font-weight: 600;
@@ -78,13 +81,15 @@ nav {
       top: 46px;
       background: var(--color-light);
       width: 150px;
-      padding: 7px;
       display: none;
+      padding: 5px;
+      padding-bottom: 0px;
+      margin-bottom: 5px;
 
       button {
         width: 100%;
-        height: 32px;
-        margin-bottom: 3px;
+        height: 2.5rem;
+        margin-bottom: 5px;
       }
     }
 
@@ -92,4 +97,8 @@ nav {
       display: block;
     }
   }
+}
+
+.btn-perso {
+  font-size: 0.9rem;
 }
