--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --color-red: #ff6f61;
+  --color-red: #bd4c41;
   --color-light: #f2f1ec;
   --color-green: #75aa70;
   --color-blue: #136893;
