--- a/src/pages/home/components/Presentation.scss
+++ b/src/pages/home/components/Presentation.scss
@@ -23,14 +23,12 @@
 
   button {
     margin-top: 3rem;
-    width: 12rem;
+    width: 13rem;
     height: 3.5rem;
-    padding-right: 0.5rem;
-    color: var(--color-light);
 
-    div {
-      padding-top: 5px;
-      color: white;
+    svg {
+      margin-top: -5px;
+      margin-right: 10px;
     }
   }
 }
