Update des info users

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,20 @@ a {
   text-decoration: none;
 }
 
-//Personalise Bootstrap
+//Ajout class perso
+.dimension-page {
+  margin: 0rem 8rem;
+
+  @media screen and (max-width: 768px) {
+    margin: 0rem 1rem;
+  }
+}
+
+input {
+  height: 40px;
+}
+
+//Personnalisation class Bootstrap
 .btn {
   border-radius: 0px;
   height: 2.8rem;
