--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --color-red: #bd4c41;
-  --color-light: #f2f1ec;
+  --color-light: #f5f0f0;
   --color-green: #75aa70;
   --color-blue: #136893;
   --color-blue-dark: #2b4d5e;
