--- a/src/pages/account/Account.scss
+++ b/src/pages/account/Account.scss
@@ -1,5 +1,4 @@
 .account {
-  margin: 0rem 8rem;
   margin-top: 3rem;
 
   .title {
@@ -8,6 +7,6 @@
   }
 
   .welcome {
-    color: var(--color-blue);
+    font-size: 1.2rem;
   }
 }
