--- a/src/components/navBard/NavBar.scss
+++ b/src/components/navBard/NavBar.scss
@@ -5,13 +5,18 @@ nav {
   position: relative;
   height: 75px;
 
+  @media screen and (max-width: 768px) {
+    margin: 1rem 1rem;
+  }
+
   img {
     margin-left: -8px;
+    margin-top: -6px;
   }
 
   .name-logo {
     position: absolute;
-    top: 1.8rem;
+    top: 1.6rem;
     left: 4.5rem;
     color: var(--color-green);
   }
