--- a/src/pages/account/components/historicalCommand/HistoricalCommand.scss
+++ b/src/pages/account/components/historicalCommand/HistoricalCommand.scss
@@ -5,35 +5,37 @@
     margin-bottom: 1.5rem;
     font-weight: bold;
     font-size: 1.2rem;
+    color: var(--color-red);
   }
 
   .command {
-    margin: 0px;
     margin-bottom: 1rem;
     padding: 1.5rem;
-    padding-right: 0px;
-    padding-bottom: 0px;
-    border: 1px solid var(--color-blue-dark);
     font-size: 0.9rem;
+    background: var(--color-light);
+    border-radius: 5px;
+
+    .show-product {
+      position: relative;
+      margin-top: 1.5rem;
+
+      .detail {
+        position: absolute;
+        top: 10px;
+        left: 90px;
+      }
+    }
 
     .state,
     .date,
-    .cost {
+    .cost,
+    .info {
       font-weight: bold;
       margin-bottom: 5px;
 
       span {
         font-weight: normal;
       }
-    }
-
-    .cost {
-      margin-bottom: 1.2rem;
-    }
-
-    img {
-      margin-right: 1.5rem;
-      margin-bottom: 1.5rem;
     }
   }
 }
