--- a/src/App.scss
+++ b/src/App.scss
@@ -22,9 +22,13 @@ a {
   text-decoration: none;
 }
 
-//Ajout class perso
+//------------------------Ajout class perso------------------------//
 .dimension-page {
   margin: 0rem 8rem;
+
+  @media screen and (max-width: 992px) {
+    margin: 0rem 4rem;
+  }
 
   @media screen and (max-width: 768px) {
     margin: 0rem 1rem;
@@ -32,10 +36,10 @@ a {
 }
 
 input {
-  height: 40px;
+  height: 35px;
 }
 
-//Personnalisation class Bootstrap
+//------------------------Personnalisation class Bootstrap------------------------//
 .btn {
   border-radius: 0px;
   height: 2.8rem;
