--- a/src/pages/account/components/profil/Profil.scss
+++ b/src/pages/account/components/profil/Profil.scss
@@ -16,6 +16,10 @@
     color: var(--color-red);
   }
 
+  .profil-box > :first-child {
+    margin-bottom: 2.5rem;
+  }
+
   .profil-box {
     background-color: var(--color-light);
     padding: 1.5rem;
@@ -23,7 +27,6 @@
 
     .profil-form {
       padding-top: 1.5rem;
-      margin-bottom: 5rem;
       display: flex;
       flex-direction: column;
 
@@ -39,7 +42,7 @@
         }
 
         input {
-          margin-bottom: 2.8rem;
+          margin-bottom: 2.2rem;
           padding: 10px;
           font-size: 16px;
           outline: none;
