--- a/src/components/navBard/NavBar.scss
+++ b/src/components/navBard/NavBar.scss
@@ -5,14 +5,7 @@ nav {
   align-items: center;
   position: relative;
   height: 75px;
-
-  @media screen and (max-width: 992px) {
-    margin: 1rem 4rem;
-  }
-
-  @media screen and (max-width: 768px) {
-    margin: 1rem 1rem;
-  }
+  z-index: 10;
 
   img {
     margin-left: -8px;
