--- a/src/pages/account/components/historicalCommand/HistoricalCommand.scss
+++ b/src/pages/account/components/historicalCommand/HistoricalCommand.scss
@@ -5,14 +5,14 @@
     margin-bottom: 1.5rem;
     font-weight: bold;
     font-size: 1.2rem;
-    color: var(--color-red);
+    color: var(--color-green);
   }
 
   .command {
     margin-bottom: 1rem;
     padding: 1.5rem;
     font-size: 0.9rem;
-    background: var(--color-light);
+    box-shadow: 3px 3px 10px grey;
     border-radius: 5px;
 
     .show-product {
