--- a/src/pages/register/Register.scss
+++ b/src/pages/register/Register.scss
@@ -7,7 +7,7 @@
 
 .register-title {
   font-size: 2.5rem;
-  color: var(--color-blue-dark);
+  color: var(--color-green);
   margin-bottom: 3rem;
 }
 
