Admin produit gestion quantité

--- a/src/pages/shop/components/product/Product.scss
+++ b/src/pages/shop/components/product/Product.scss
@@ -23,6 +23,8 @@
         margin-bottom: 0.5rem;
         font-weight: bold;
         color: var(--color-green);
+        height: 25px;
+        overflow-y: hidden;
       }
 
       div {
