--- a/src/pages/admin/gestionProduct/GestionProduct.scss
+++ b/src/pages/admin/gestionProduct/GestionProduct.scss
@@ -25,7 +25,8 @@
 .gestion-product {
   margin-top: 2rem;
 
-  input {
+  input,
+  select {
     flex: 1;
     padding: 5px;
     border: 1px solid #ccc;
