--- a/src/App.scss
+++ b/src/App.scss
@@ -44,6 +44,10 @@ input {
   height: 35px;
 }
 
+.margin-left {
+  margin-left: 5px;
+}
+
 //------------------------Personnalisation class Bootstrap------------------------//
 .btn {
   height: 2.8rem;
