--- a/src/pages/admin/Admin.scss
+++ b/src/pages/admin/Admin.scss
@@ -10,4 +10,13 @@
     align-items: center;
     justify-content: center;
   }
+
+  input,
+  select {
+    flex: 1;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    max-width: 200px;
+  }
 }
