--- a/src/App.scss
+++ b/src/App.scss
@@ -40,7 +40,13 @@ textarea:disabled {
 }
 
 //------------------------Ajout class perso------------------------//
-input {
+
+input,
+select {
+  flex: 1;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
   height: 35px;
 }
 
