Affichage des commandes

--- a/src/pages/account/components/historicalCommand/HistoricalCommand.scss
+++ b/src/pages/account/components/historicalCommand/HistoricalCommand.scss
@@ -15,6 +15,10 @@
     box-shadow: 3px 3px 10px grey;
     border-radius: 5px;
 
+    .nocommand {
+      text-align: center;
+    }
+
     .show-product {
       position: relative;
       margin-top: 1.5rem;
