--- a/src/pages/admin/gestionProduct/showListProduct/ShowListProduct.scss
+++ b/src/pages/admin/gestionProduct/showListProduct/ShowListProduct.scss
@@ -42,6 +42,19 @@
     }
   }
 
+  .btn-delete {
+    position: absolute;
+    top: 45px;
+    right: 0;
+    width: fit-content;
+    border-radius: 0px;
+    width: 45px;
+
+    svg {
+      margin-left: -2px;
+    }
+  }
+
   .btn-update {
     position: absolute;
     top: 0;
