Verification quantité item en stock

--- a/src/pages/cart/cartPageOne/CartPageOne.scss
+++ b/src/pages/cart/cartPageOne/CartPageOne.scss
@@ -1,3 +1,9 @@
+.error-stock {
+  font-size: 0.8rem;
+  color: red;
+  margin-bottom: -2.15rem;
+  text-align: center;
+}
 .card {
   margin: auto;
   margin-top: 3rem;
