--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --color-red: #bd4c41;
+  --color-red: #bb4035;
   --color-light: #f5f0f0;
   --color-green: #198754;
   --color-blue: #136893;
