--- a/src/pages/admin/gestionOrder/GestionOrder.scss
+++ b/src/pages/admin/gestionOrder/GestionOrder.scss
@@ -1,3 +1,82 @@
 .gestion-order {
   margin-top: 2rem;
+
+  .bold {
+    font-weight: bold;
+  }
+
+  .btn-dark {
+    display: flex;
+    align-items: center;
+    svg {
+      margin-right: 5px;
+    }
+  }
+
+  .list-order {
+    box-shadow: 2px 2px 10px grey;
+    margin-bottom: 1rem;
+    position: relative;
+    border-radius: 5px;
+    padding: 10px 15px;
+
+    .global {
+      margin-bottom: 0.5rem;
+
+      .state {
+        font-weight: bold;
+        color: var(--color-red);
+        margin-bottom: 3px;
+
+        svg {
+          margin-top: -5px;
+        }
+      }
+    }
+
+    .box-info {
+      .info {
+        margin-top: 0px;
+        margin-bottom: 0.8rem;
+        background: #cbe7da;
+        border-radius: 5px;
+        padding: 10px 15px;
+        height: 164.5px;
+      }
+    }
+
+    .box-img {
+      text-align: center;
+
+      .product {
+        margin-top: 0px;
+        margin-bottom: 10px;
+        box-shadow: 0 0 5px black;
+        padding: 10px;
+        border-radius: 5px;
+
+        .picture {
+          width: 100px;
+          margin: auto;
+          height: 100px;
+          position: relative;
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: center center;
+        }
+
+        .title-product {
+          font-weight: bold;
+          color: var(--color-green);
+          height: 25px;
+          overflow-y: hidden;
+        }
+
+        .quantity {
+          font-size: 0.8rem;
+          font-weight: bold;
+        }
+      }
+    }
+  }
 }
