--- a/src/pages/admin/gestionOrder/GestionOrder.scss
+++ b/src/pages/admin/gestionOrder/GestionOrder.scss
@@ -1,16 +1,25 @@
 .gestion-order {
   margin-top: 2rem;
 
-  .bold {
-    font-weight: bold;
+  .filtre {
+    display: flex;
+    margin-bottom: 1rem;
   }
 
-  .btn-dark {
+  .btn {
     display: flex;
     align-items: center;
     svg {
       margin-right: 5px;
     }
+  }
+
+  .bold {
+    font-weight: bold;
+  }
+
+  .bg-color {
+    background-color: rgb(238, 237, 237);
   }
 
   .list-order {
@@ -25,7 +34,7 @@
 
       .state {
         font-weight: bold;
-        color: var(--color-red);
+        color: var(--color-blue-dark);
         margin-bottom: 3px;
 
         svg {
@@ -38,10 +47,9 @@
       .info {
         margin-top: 0px;
         margin-bottom: 0.8rem;
-        background: #cbe7da;
+        background: #c5c5e2;
         border-radius: 5px;
         padding: 10px 15px;
-        height: 164.5px;
       }
     }
 
@@ -76,6 +84,21 @@
           font-size: 0.8rem;
           font-weight: bold;
         }
+        .price {
+          font-size: 0.8rem;
+        }
+      }
+    }
+
+    .loading-update-state {
+      position: absolute;
+      bottom: 15px;
+      right: 10px;
+
+      .spinner-grow {
+        z-index: 10;
+        width: 15px;
+        height: 15px;
       }
     }
   }
