--- a/src/pages/admin/gestionProduct/showCategory/ShowCategory.scss
+++ b/src/pages/admin/gestionProduct/showCategory/ShowCategory.scss
@@ -1,11 +1,18 @@
 .gestion-categorie {
   margin-top: 2rem;
 
+  .btn-danger {
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+  }
+
   input {
     flex: 1;
     padding: 5px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 5px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
     max-width: 200px;
   }
 
