--- a/src/pages/register/Register.scss
+++ b/src/pages/register/Register.scss
@@ -1,7 +1,7 @@
 .register-container {
   padding: 1rem;
   text-align: center;
-  max-width: 30rem;
+  max-width: 32rem;
   margin: auto;
 }
 
@@ -28,7 +28,7 @@
     }
 
     input {
-      margin-bottom: 2.8rem;
+      margin-bottom: 2rem;
       padding: 10px;
       font-size: 16px;
       outline: none;
@@ -37,9 +37,10 @@
   }
 
   .signup-error {
-    margin-top: -2.15rem;
-    margin-bottom: 0.65rem;
+    margin-top: -1.63rem;
+    margin-bottom: 0.3rem;
     color: var(--color-red);
+    font-size: 0.9rem;
   }
 
   button {
