--- a/src/pages/admin/gestionOrder/GestionOrder.scss
+++ b/src/pages/admin/gestionOrder/GestionOrder.scss
@@ -3,6 +3,9 @@
 
   .filtre {
     display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
+    gap: 0.3rem;
     margin-bottom: 1rem;
   }
 
