--- a/src/pages/admin/gestionOrder/GestionOrder.scss
+++ b/src/pages/admin/gestionOrder/GestionOrder.scss
@@ -3,7 +3,7 @@
 
   .filtre {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     flex-wrap: wrap;
     gap: 0.3rem;
     margin-bottom: 1rem;
