--- a/src/pages/cart/cartPageTwo/CartPageTwo.scss
+++ b/src/pages/cart/cartPageTwo/CartPageTwo.scss
@@ -5,6 +5,10 @@
     font-size: 1rem;
   }
 
+  .form-control {
+    width: 100% !important;
+  }
+
   .btn {
     height: 35px;
     display: flex;
