--- a/src/pages/cart/cartPageOne/CartPageOne.scss
+++ b/src/pages/cart/cartPageOne/CartPageOne.scss
@@ -22,13 +22,20 @@
   }
 
   .picture {
-    width: 80px;
+    width: 75px;
     margin: auto;
-    height: 80px;
+    height: 75px;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+  }
+
+  @media screen and (max-width: 576px) {
+    .picture {
+      width: 120px;
+      height: 120px;
+    }
   }
 
   .cart {
@@ -47,10 +54,6 @@
         margin-top: 2rem;
       }
     }
-  }
-
-  img {
-    width: 7rem;
   }
 
   .summary {
