--- a/src/App.scss
+++ b/src/App.scss
@@ -84,8 +84,8 @@ select {
   border: 1px solid var(--color-red);
 
   &:hover {
-    background-color: #f74838;
-    border: 1px solid #f74838;
+    background-color: #e1685b;
+    border: 1px solid #e1685b;
   }
 }
 
@@ -94,8 +94,8 @@ select {
   color: black;
 
   &:hover {
-    background-color: #f74838;
-    border: 1px solid #f74838;
+    background-color: #e1685b;
+    border: 1px solid #e1685b;
   }
 }
 
