--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --color-red: #cf2f21;
+  --color-red: #e74c3c;
   --color-light: #f5f0f0;
   --color-green: #198754;
   --color-blue: #136893;
