--- a/src/pages/home/hero/Hero.scss
+++ b/src/pages/home/hero/Hero.scss
@@ -24,11 +24,12 @@
 
   button {
     margin-top: 3rem;
+    padding: 30px 20px;
 
     .in-btn {
       display: flex;
       justify-content: center;
-      margin-top: 2px;
+      margin-top: -10px;
       gap: 7px;
 
       svg {
