--- a/src/pages/home/productsExemple/ProductsExemple.scss
+++ b/src/pages/home/productsExemple/ProductsExemple.scss
@@ -2,9 +2,10 @@
   padding: 50px 0;
 
   .product-box {
-    height: 350px;
+    height: 450px;
 
     .picture {
+      border-radius: 10px;
       height: 100%;
       background: linear-gradient(
           rgba($color: #000000, $alpha: 0.5),
@@ -15,13 +16,19 @@
       background-size: cover;
       background-position: center center;
 
-      .text {
+      .box-text {
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100%;
-        font-size: 2rem;
-        color: white;
+        position: relative;
+
+        .text {
+          position: absolute;
+          bottom: 1.5rem;
+          font-size: 1.8rem;
+          color: white;
+        }
       }
     }
   }
