--- a/src/pages/home/productsExemple/ProductsExemple.scss
+++ b/src/pages/home/productsExemple/ProductsExemple.scss
@@ -2,19 +2,43 @@
   padding: 50px 0;
 
   .product-box {
-    height: 450px;
+    height: 400px;
+    margin-bottom: 1.5rem;
+
+    @media screen and (max-width: 576px) {
+      padding: 0 40px;
+    }
+
+    @media screen and (max-width: 400px) {
+      padding: 0 0px;
+    }
 
     .picture {
       border-radius: 10px;
+
       height: 100%;
       background: linear-gradient(
-          rgba($color: #000000, $alpha: 0.5),
+          rgba($color: #000000, $alpha: 0.2),
           rgba($color: #000000, $alpha: 0.5)
         ),
         url("https://img01.ztat.net/article/spp-media-p1/8d17e3927eb535b4af075b734af2d48c/39882ce77e4b48fe8de038886082e035.jpg?imwidth=1800");
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center center;
+      transition: 0.3s;
+
+      &:hover {
+        scale: 1.05;
+        cursor: pointer;
+        background: linear-gradient(
+            rgba($color: #000000, $alpha: 0.1),
+            rgba($color: #000000, $alpha: 0.1)
+          ),
+          url("https://img01.ztat.net/article/spp-media-p1/8d17e3927eb535b4af075b734af2d48c/39882ce77e4b48fe8de038886082e035.jpg?imwidth=1800");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+      }
 
       .box-text {
         display: flex;
@@ -25,13 +49,11 @@
 
         .text {
           position: absolute;
-          bottom: 1.5rem;
-          font-size: 1.8rem;
+          bottom: 1.2rem;
+          font-size: 1.3rem;
           color: white;
         }
       }
     }
   }
-
-  // Styles pour la liste de produits
 }
