Redirect formulaire contact navbar

--- a/src/components/navBar/NavBar.scss
+++ b/src/components/navBar/NavBar.scss
@@ -27,6 +27,11 @@ nav {
 
   .shop {
     position: absolute;
+    right: 13.5rem;
+  }
+
+  .contact {
+    position: absolute;
     right: 8rem;
   }
 
