--- a/src/pages/home/formContact/FormContact.scss
+++ b/src/pages/home/formContact/FormContact.scss
@@ -43,4 +43,15 @@
       }
     }
   }
+
+  @media screen and (max-width: 576px) {
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 2rem;
+    }
+
+    .form-contact {
+      padding: 0;
+    }
+  }
 }
