--- a/src/pages/admin/gestionProduct/showListProduct/ShowListProduct.scss
+++ b/src/pages/admin/gestionProduct/showListProduct/ShowListProduct.scss
@@ -139,6 +139,17 @@
         border-radius: 5px;
       }
     }
+
+    .showHome {
+      margin-top: -10px;
+      margin-bottom: 5px;
+
+      div {
+        margin-top: -32px;
+        margin-left: 18px;
+        font-size: 0.75rem;
+      }
+    }
   }
 }
 
