--- a/src/pages/home/hero/Hero.scss
+++ b/src/pages/home/hero/Hero.scss
@@ -1,10 +1,7 @@
 .hero {
   background-color: #fff;
   text-align: center;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  margin-top: -75px;
+  padding: 60px 0px;
 
   h3 {
     font-size: 1.5rem;
