--- a/src/pages/home/productsExemple/ProductsExemple.scss
+++ b/src/pages/home/productsExemple/ProductsExemple.scss
@@ -2,7 +2,7 @@
   padding: 50px 0;
 
   .product-box {
-    height: 300px;
+    height: 325px;
     margin-bottom: 1.5rem;
 
     @media screen and (max-width: 992px) {
@@ -47,8 +47,9 @@
 
         .text {
           position: absolute;
-          bottom: 1.2rem;
-          font-size: 1.3rem;
+          bottom: 1.1rem;
+          font-size: 1.5rem;
+          text-shadow: 0 0 10px rgb(174, 173, 173);
           color: white;
         }
       }
