--- a/src/pages/home/productsExemple/ProductsExemple.scss
+++ b/src/pages/home/productsExemple/ProductsExemple.scss
@@ -18,10 +18,9 @@
     }
 
     .picture-wait {
-      border: 1px solid rgb(226, 226, 226);
+      border: 1px solid white;
       height: 100%;
       border-radius: 10px;
-      background: rgb(226, 226, 226);
     }
 
     .picture {
