--- a/src/pages/shop/components/product/Product.scss
+++ b/src/pages/shop/components/product/Product.scss
@@ -4,6 +4,11 @@
   .product-box {
     max-width: 250px;
     margin: auto;
+    transition: 0.4s;
+
+    &:hover {
+      scale: 1.03;
+    }
 
     .picture {
       width: 100%;
@@ -15,6 +20,7 @@
       background-position: center center;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
+      cursor: pointer;
     }
 
     .infos {
