--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   --color-red: #e74c3c;
   --color-light: #f5f0f0;
-  --color-green: #198754;
+  --color-green: #76aa70;
   --color-blue: #136893;
   --color-blue-dark: #2b4d5e;
 }
