--- a/src/pages/productDetails/ProductDetails.scss
+++ b/src/pages/productDetails/ProductDetails.scss
@@ -1,4 +1,5 @@
 .product-details {
+  margin-top: 1.5rem;
   box-shadow: 3px 3px 10px rgb(171, 171, 171);
   border-radius: 10px;
   padding: 1rem;
@@ -8,6 +9,7 @@
       margin: auto;
       width: 100%;
       height: 70vh;
+      max-height: 500px;
       border-radius: 10px;
       background-repeat: no-repeat;
       background-size: cover;
