--- a/src/pages/shop/components/product/Product.scss
+++ b/src/pages/shop/components/product/Product.scss
@@ -28,7 +28,7 @@
         margin-top: 0.8rem;
         margin-bottom: 0.5rem;
         font-weight: bold;
-        color: var(--color-green);
+        color: var(--color-dark);
         height: 25px;
         overflow-y: hidden;
       }
