--- a/src/App.scss
+++ b/src/App.scss
@@ -4,9 +4,12 @@ html,
 body {
   max-width: 100vw;
   min-width: 320px;
-  min-height: 100vh;
 
   font-family: "Sora", sans-serif;
+}
+
+.contenu {
+  min-height: 100vh;
 }
 
 nav li,
