--- a/src/pages/productDetails/ProductDetails.scss
+++ b/src/pages/productDetails/ProductDetails.scss
@@ -8,8 +8,7 @@
     .picture {
       margin: auto;
       width: 100%;
-      height: 70vh;
-      max-height: 500px;
+      height: 500px;
       border-radius: 10px;
       background-repeat: no-repeat;
       background-size: cover;
@@ -30,7 +29,7 @@
     padding: 0rem 1rem;
     position: relative;
 
-    .contenu {
+    .info {
       margin-bottom: 4.5rem;
 
       .title {
