--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -2,9 +2,10 @@
   margin-top: 1rem;
   color: white;
   text-align: center;
-  background-color: #163114;
+  background-color: black;
   display: flex;
   flex-flow: column nowrap;
+  padding: 1rem;
 }
 
 .social-links {
@@ -20,18 +21,5 @@
     &:hover {
       scale: 1.1;
     }
-  }
-}
-
-@media (min-width: 768px) {
-  .footer {
-    padding: 1.2rem;
-  }
-  .footer small {
-    font-size: 1rem;
-  }
-
-  .footer a {
-    font-size: 1.5rem;
   }
 }
