--- a/src/pages/admin/gestionProduct/showListProduct/ShowListProduct.scss
+++ b/src/pages/admin/gestionProduct/showListProduct/ShowListProduct.scss
@@ -99,8 +99,12 @@
 
       .quantity {
         margin-top: 4px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         .btn-quantity {
-          height: 35px;
+          height: 25px;
           width: 1.8rem;
           text-align: center;
           border: none;
@@ -112,12 +116,24 @@
         }
 
         .show-quantity {
-          height: 35px;
-          border-radius: 0px;
           width: 2rem;
           text-align: center;
           border: none;
+          margin-top: 2px;
         }
+      }
+
+      .btn-dark {
+        font-size: 0.8rem;
+        height: 20px;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 3px;
+        gap: 3px;
+        margin-top: 5px;
+        width: 91px;
       }
     }
   }
@@ -134,7 +150,7 @@
       textarea {
         border: 1px solid #ccc;
         width: 100%;
-        height: 80px;
+        height: 73px;
         padding: 5px 7px;
         border-radius: 5px;
       }
@@ -165,8 +181,16 @@
       .price-quantity {
         text-align: left;
         width: 100%;
-        margin-top: 70px;
+        margin-top: 45px;
         margin-left: 20px;
+
+        .quantity {
+          justify-content: start;
+        }
+
+        .btn-dark {
+          margin-left: 0;
+        }
       }
     }
 
