--- a/src/pages/productDetails/ProductDetails.scss
+++ b/src/pages/productDetails/ProductDetails.scss
@@ -1,5 +1,6 @@
 .product-details {
   margin-top: 1.5rem;
+  margin-bottom: 3rem;
   box-shadow: 3px 3px 10px rgb(171, 171, 171);
   border-radius: 10px;
   padding: 1rem;
@@ -8,7 +9,7 @@
     .picture {
       margin: auto;
       width: 100%;
-      height: 500px;
+      height: 400px;
       border-radius: 10px;
       background-repeat: no-repeat;
       background-size: cover;
