--- a/src/pages/productDetails/ProductDetails.scss
+++ b/src/pages/productDetails/ProductDetails.scss
@@ -64,9 +64,39 @@
       position: absolute;
       bottom: 0;
 
+      .box-btn {
+        position: relative;
+        margin-top: 1rem;
+
+        .cart-add-animation {
+          position: absolute;
+          top: 0px;
+          right: 2px;
+          padding: 8px;
+          background-color: black;
+          border-radius: 50%;
+        }
+        .animation-start {
+          position: absolute;
+          transform-origin: center;
+          animation: rise 0.8s ease-in-out forwards;
+        }
+      }
+
       .btn-success {
         margin-left: 0.5rem;
       }
     }
+  }
+}
+
+@keyframes rise {
+  0% {
+    transform: translateY(0) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-80vh) scale(0.6);
+    opacity: 0;
   }
 }
