--- a/src/pages/shop/components/product/Product.scss
+++ b/src/pages/shop/components/product/Product.scss
@@ -62,7 +62,7 @@
         top: 0px;
         right: 2px;
         padding: 8px;
-        background-color: black;
+        background-color: var(--color-green);
         border-radius: 50%;
       }
       .animation-start {
@@ -80,7 +80,7 @@
     opacity: 1;
   }
   100% {
-    transform: translateY(-80vh) scale(0.6);
+    transform: translateY(-300px) scale(0.6);
     opacity: 0;
   }
 }
