--- a/src/pages/admin/gestionProduct/showListProduct/ShowListProduct.scss
+++ b/src/pages/admin/gestionProduct/showListProduct/ShowListProduct.scss
@@ -150,13 +150,13 @@
       textarea {
         border: 1px solid #ccc;
         width: 100%;
-        height: 73px;
+        height: 96px;
         padding: 5px 7px;
         border-radius: 5px;
       }
     }
 
-    .showHome {
+    .option-supp {
       margin-top: -10px;
       margin-bottom: 5px;
 
