--- a/src/pages/shop/components/product/Product.scss
+++ b/src/pages/shop/components/product/Product.scss
@@ -21,6 +21,30 @@
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
       cursor: pointer;
+
+      &:hover .show-product {
+        background-color: rgba($color: #000000, $alpha: 0.3);
+      }
+
+      &:hover .show-product svg {
+        scale: 1;
+      }
+
+      .show-product {
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        transition: 0.6s;
+
+        svg {
+          scale: 0;
+          color: white;
+          transition: 0.6s;
+        }
+      }
     }
 
     .infos {
