--- a/src/pages/cart/cartPageOne/CartPageOne.scss
+++ b/src/pages/cart/cartPageOne/CartPageOne.scss
@@ -105,8 +105,15 @@
       margin-top: 1rem;
     }
 
+    .line {
+      height: 1px;
+      width: 100%;
+      background-color: white;
+      margin-top: 1.5rem;
+    }
+
     .total-cost {
-      margin-top: 2rem;
+      margin-top: 1.5rem;
     }
 
     .action-cart {
