--- a/src/pages/admin/gestionProduct/showListProduct/ShowListProduct.scss
+++ b/src/pages/admin/gestionProduct/showListProduct/ShowListProduct.scss
@@ -174,6 +174,12 @@
     .info-detail {
       display: flex;
 
+      .file-upload {
+        position: absolute;
+        right: 100px;
+        z-index: 10;
+      }
+
       .picture {
         width: 180px;
       }
