Ajout facture pour commande

--- a/src/pages/cart/successPayment/SuccessPayment.scss
+++ b/src/pages/cart/successPayment/SuccessPayment.scss
@@ -16,6 +16,12 @@
     color: #666;
   }
 
+  .info {
+    margin-top: -3px;
+    margin-bottom: 10px;
+    font-size: 0.9rem;
+  }
+
   button {
     margin-top: 1.5rem;
   }
