--- a/src/pages/account/components/historicalCommand/HistoricalCommand.scss
+++ b/src/pages/account/components/historicalCommand/HistoricalCommand.scss
@@ -15,6 +15,16 @@
     box-shadow: 3px 3px 10px grey;
     border-radius: 5px;
 
+    .btn-facture {
+      height: 35px;
+      margin-top: -10px;
+      margin-bottom: 10px;
+
+      svg {
+        margin-top: -5px;
+      }
+    }
+
     .nocommand {
       text-align: center;
     }
