--- a/src/pages/productDetails/ProductDetails.scss
+++ b/src/pages/productDetails/ProductDetails.scss
@@ -33,18 +33,30 @@
     .picture {
       margin: auto;
       width: 100%;
-      height: 400px;
+      height: 550px;
       border-radius: 10px;
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center center;
     }
 
+    @media screen and (max-width: 1400px) {
+      .picture {
+        height: 450px;
+      }
+    }
+
+    @media screen and (max-width: 1200px) {
+      .picture {
+        height: 400px;
+      }
+    }
+
     @media screen and (max-width: 768px) {
       margin-bottom: 1rem;
 
       .picture {
-        height: 260px;
+        height: 350px;
         width: 260px;
       }
     }
